[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/MenuBackground.gd" type="Script" id=1]
[ext_resource path="res://visuals/fantasy-1920-x-1080_full.png" type="Texture" id=2]
[ext_resource path="res://scripts/MainMenuContainer.gd" type="Script" id=3]
[ext_resource path="res://visuals/wood_pack/text/Title Name.png" type="Texture" id=4]
[ext_resource path="res://visuals/wood_pack/button_icon_set/TEXT BTN  play.png" type="Texture" id=5]
[ext_resource path="res://visuals/wood_pack/button_icon_set/TEXT BTN  empty.png" type="Texture" id=6]
[ext_resource path="res://visuals/wood_pack/text/settings.png" type="Texture" id=7]
[ext_resource path="res://visuals/wood_pack/button_icon_set/TEXT BTN  quit.png" type="Texture" id=8]

[node name="GameMenu" type="Node"]

[node name="MainMenu" type="Node" parent="."]

[node name="MenuBackground" type="ParallaxBackground" parent="MainMenu"]
script = ExtResource( 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="MainMenu/MenuBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Floating_Island_BG" type="Sprite" parent="MainMenu/MenuBackground/ParallaxLayer"]
scale = Vector2( 1, 0.829 )
texture = ExtResource( 2 )
centered = false

[node name="MainMenuContainer" type="MarginContainer" parent="MainMenu"]
margin_left = 204.734
margin_top = 220.625
margin_right = 510.734
margin_bottom = 818.625
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Title" type="Sprite" parent="MainMenu/MainMenuContainer"]
position = Vector2( 147.596, -121.032 )
scale = Vector2( 0.787331, 1.9633 )
texture = ExtResource( 4 )

[node name="MenuOptions" type="VBoxContainer" parent="MainMenu/MainMenuContainer"]
margin_right = 306.0
margin_bottom = 598.0

[node name="PlayButton" type="TextureButton" parent="MainMenu/MainMenuContainer/MenuOptions"]
margin_right = 306.0
margin_bottom = 102.0
texture_normal = ExtResource( 5 )

[node name="SettingsButton" type="TextureButton" parent="MainMenu/MainMenuContainer/MenuOptions"]
margin_top = 106.0
margin_right = 306.0
margin_bottom = 208.0
texture_normal = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="MainMenu/MainMenuContainer/MenuOptions/SettingsButton"]
position = Vector2( 126.621, 41.8823 )
scale = Vector2( 0.484606, 0.528121 )
texture = ExtResource( 7 )

[node name="QuitButton" type="TextureButton" parent="MainMenu/MainMenuContainer/MenuOptions"]
margin_top = 212.0
margin_right = 306.0
margin_bottom = 314.0
texture_normal = ExtResource( 8 )

